--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -31,7 +31,7 @@
       <rect>
        <x>100</x>
        <y>40</y>
-       <width>115</width>
+       <width>110</width>
        <height>20</height>
       </rect>
      </property>
@@ -41,7 +41,7 @@
       <rect>
        <x>100</x>
        <y>70</y>
-       <width>90</width>
+       <width>110</width>
        <height>20</height>
       </rect>
      </property>
@@ -86,6 +86,25 @@
      </property>
      <property name="text">
       <string>Password</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label">
+     <property name="geometry">
+      <rect>
+       <x>200</x>
+       <y>70</y>
+       <width>21</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="pixmap">
+      <pixmap>:/new/login_icons/C:/Users/gayan/Desktop/3.jpg</pixmap>
+     </property>
+     <property name="scaledContents">
+      <bool>true</bool>
      </property>
     </widget>
    </widget>
