--- a/GUI/Admin_Pages/AdminMainPage.ui
+++ b/GUI/Admin_Pages/AdminMainPage.ui
@@ -6,21 +6,33 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>450</width>
-    <height>300</height>
+    <width>900</width>
+    <height>600</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-color:qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgb(251, 194, 255), stop:1 rgba(255, 255, 255, 255));
+color: rgb(255, 85, 255);
+border-style: outset;
+border-width: 2px;
+border-radius: 10px;
+border-color: rgb(255, 85, 255);
+font: bold 14px;
+min-width: 10em;
+padding: 6px;
+</string>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QPushButton" name="back_PushButton">
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>230</y>
-      <width>75</width>
-      <height>23</height>
+      <x>30</x>
+      <y>550</y>
+      <width>191</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
