--- a/GUI/Admin_Pages/Superadmin.ui
+++ b/GUI/Admin_Pages/Superadmin.ui
@@ -6,20 +6,32 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>450</width>
-    <height>300</height>
+    <width>900</width>
+    <height>600</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-color:qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgb(251, 194, 255), stop:1 rgba(255, 255, 255, 255));
+color: rgb(255, 85, 255);
+border-style: outset;
+border-width: 2px;
+border-radius: 10px;
+border-color: rgb(255, 85, 255);
+font: bold 14px;
+min-width: 10em;
+padding: 6px;
+</string>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QPushButton" name="Create_User_pushButton">
     <property name="geometry">
      <rect>
-      <x>114</x>
+      <x>20</x>
       <y>120</y>
-      <width>90</width>
+      <width>186</width>
       <height>40</height>
      </rect>
     </property>
@@ -30,9 +42,9 @@
    <widget class="QPushButton" name="Create_Admin_pushButton">
     <property name="geometry">
      <rect>
-      <x>260</x>
-      <y>120</y>
-      <width>90</width>
+      <x>20</x>
+      <y>70</y>
+      <width>186</width>
       <height>40</height>
      </rect>
     </property>
@@ -43,10 +55,10 @@
    <widget class="QPushButton" name="LogOut_pushButton">
     <property name="geometry">
      <rect>
-      <x>370</x>
-      <y>10</y>
-      <width>75</width>
-      <height>23</height>
+      <x>680</x>
+      <y>40</y>
+      <width>186</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
