--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -6,22 +6,38 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>450</width>
-    <height>300</height>
+    <width>900</width>
+    <height>600</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-color:qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgb(255, 170, 255), stop:1 rgb(255, 170, 255))
+</string>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QGroupBox" name="groupBox">
     <property name="geometry">
      <rect>
-      <x>100</x>
-      <y>80</y>
-      <width>250</width>
-      <height>140</height>
+      <x>170</x>
+      <y>120</y>
+      <width>461</width>
+      <height>311</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color:qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgb(251, 194, 255), stop:1 rgba(255, 255, 255, 255));
+color: rgb(255, 85, 255);
+border-style: outset;
+border-width: 2px;
+border-radius: 10px;
+border-color: rgb(255, 85, 255);
+font:bold 14px;
+min-width: 10em;
+padding: 6px;
+</string>
     </property>
     <property name="title">
      <string>LogIn</string>
@@ -29,20 +45,20 @@
     <widget class="QLineEdit" name="lineEdit_Username">
      <property name="geometry">
       <rect>
-       <x>100</x>
-       <y>40</y>
-       <width>110</width>
-       <height>20</height>
+       <x>220</x>
+       <y>79</y>
+       <width>186</width>
+       <height>31</height>
       </rect>
      </property>
     </widget>
     <widget class="QLineEdit" name="lineEdit_Password">
      <property name="geometry">
       <rect>
-       <x>100</x>
-       <y>70</y>
-       <width>110</width>
-       <height>20</height>
+       <x>215</x>
+       <y>129</y>
+       <width>191</width>
+       <height>31</height>
       </rect>
      </property>
      <property name="echoMode">
@@ -52,10 +68,10 @@
     <widget class="QPushButton" name="PushButton_Login">
      <property name="geometry">
       <rect>
-       <x>85</x>
-       <y>110</y>
-       <width>80</width>
-       <height>25</height>
+       <x>235</x>
+       <y>240</y>
+       <width>186</width>
+       <height>41</height>
       </rect>
      </property>
      <property name="text">
@@ -65,10 +81,10 @@
     <widget class="QLabel" name="usernameLabel">
      <property name="geometry">
       <rect>
-       <x>30</x>
-       <y>40</y>
-       <width>70</width>
-       <height>16</height>
+       <x>20</x>
+       <y>80</y>
+       <width>186</width>
+       <height>31</height>
       </rect>
      </property>
      <property name="text">
@@ -78,41 +94,22 @@
     <widget class="QLabel" name="passwordLabel">
      <property name="geometry">
       <rect>
-       <x>30</x>
-       <y>70</y>
-       <width>70</width>
-       <height>16</height>
+       <x>20</x>
+       <y>130</y>
+       <width>186</width>
+       <height>31</height>
       </rect>
      </property>
      <property name="text">
       <string>Password</string>
      </property>
     </widget>
-    <widget class="QLabel" name="label">
-     <property name="geometry">
-      <rect>
-       <x>200</x>
-       <y>70</y>
-       <width>21</width>
-       <height>21</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
-     <property name="pixmap">
-      <pixmap>:/new/login_icons/C:/Users/gayan/Desktop/3.jpg</pixmap>
-     </property>
-     <property name="scaledContents">
-      <bool>true</bool>
-     </property>
-    </widget>
    </widget>
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>40</y>
+      <x>280</x>
+      <y>50</y>
       <width>241</width>
       <height>41</height>
      </rect>
@@ -120,8 +117,23 @@
     <property name="font">
      <font>
       <family>Rockwell</family>
-      <pointsize>11</pointsize>
+      <pointsize>-1</pointsize>
+      <weight>75</weight>
+      <italic>false</italic>
+      <bold>true</bold>
      </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color:qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgb(251, 194, 255), stop:1 rgba(255, 255, 255, 255));
+color: rgb(255, 85, 255);
+border-style: outset;
+border-width: 2px;
+border-radius: 10px;
+border-color: rgb(255, 85, 255);
+font: bold 14px;
+min-width: 10em;
+padding: 6px;
+</string>
     </property>
     <property name="text">
      <string>LogIn to your Market Place</string>
